<?xml version="1.0"?>
<package format="3">

  <name>fog_bumper</name>
  <version>0.0.1</version>
  <description>Program for publishing bumper messages for reactive collision avoidance</description>

  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
  <maintainer email="spurny@fly4future.com">Vojtech Spurny</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>fog_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>launch_ros</exec_depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
